upgrade shell